--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 html,
 body {
@@ -25,8 +26,8 @@ header {
   nav {
     .inner {
       height: 10rem;
-      background: red;
-      color: white;
+      // background: red;
+      color: green;
     }
   }
   h1 {
