--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,7 @@ a {
 }
 
 * {
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
@@ -22,6 +23,11 @@ p {
 }
 
 header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  // background: red;
   .top-info {
     display: flex;
     justify-content: center;
@@ -32,11 +38,13 @@ header {
     .contact-info {
       display: flex;
       align-items: center;
-      margin-right: 2rem;
+      margin-right: 3rem;
       margin-bottom: 0.3rem;
+      color: $dark;
 
       i {
         margin-right: 0.5rem;
+        color: $secondary;
       }
       p {
         margin: 0;
@@ -53,18 +61,56 @@ header {
     }
   }
   nav {
-    background: $primary;
-    height: 3rem;
+    background: rgba(28, 70, 120, 0.9);
+    color: $light;
+    position: sticky;
+    top: 0;
+    padding: 0.5rem;
+    z-index: 10;
+    // box-shadow: ;
     .inner {
-      // background: red;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      i {
+        background: $secondary;
+        color: $primary;
+        cursor: pointer;
+        padding: 0.1rem;
+      }
+      ul {
+        li {
+          a {
+            color: $secondary;
+            cursor: pointer;
+            &:hover {
+              color: $light;
+            }
+          }
+        }
+      }
     }
   }
   h1 {
-    color: $primary;
+    color: linear-gradient();
   }
 
   .content {
-    display: grid;
-    place-items: center;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    .center-content {
+      display: grid;
+      place-items: center;
+    }
+    .bottom-content {
+      // flex: 1;
+      height: 30%;
+      background: $primary;
+      @media screen and (max-width: 768px) {
+        height: 50%;
+      }
+    }
   }
 }
