--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,2 +1,4 @@
 @import "./variables";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
