--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,15 +28,6 @@ header {
   flex-direction: column;
   justify-content: space-between;
 
-  // &::after {
-  //   content: "Buez";
-  //   position: fixed;
-  //   top: 50%;
-  //   left: 50%;
-  //   z-index: -1;
-  //   font-size: 5rem;
-  // }
-  // background: red;
   .top-info {
     display: flex;
     justify-content: center;
@@ -66,15 +57,19 @@ header {
         background: $primary;
         padding: 0.2rem;
         border-radius: 50%;
+        cursor: pointer;
       }
     }
   }
   nav {
-    background: rgba(28, 70, 120, 0.9);
-    color: $light;
+    background: rgba(217, 92, 50);
+    color: $primary;
     position: sticky;
     top: 0;
-    // padding: 0.5rem;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 0 0.5rem $secondary;
+    // top: 0;
     z-index: 10;
     // box-shadow: ;
     .inner {
@@ -83,19 +78,20 @@ header {
       justify-content: space-between;
 
       i {
-        background: $secondary;
+        background: $dark;
         color: $light;
         cursor: pointer;
-        padding: 0.1rem;
+        padding: 0.2rem;
+        border-radius: 50%;
       }
 
       ul {
         li {
           a {
-            color: $light;
+            color: $primary;
             cursor: pointer;
             &:hover {
-              color: $secondary;
+              color: $dark;
             }
           }
         }
@@ -107,72 +103,115 @@ header {
   }
 
   .content {
-    height: 80%;
-    background: url("../public/images/profile-pic.png") no-repeat right bottom;
-    background-size: contain;
+    height: 90%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
+    padding-bottom: 1rem;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+    }
 
-    .top-content {
-      display: flex;
-      align-items: center;
+    .styled-title {
+      font-family: "Bodoni", sans-serif;
+      background: -webkit-linear-gradient(
+        $primary,
+        $secondary,
+        $primary,
+        $secondary,
+        $primary
+      );
+      background-clip: unset;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .text {
+      width: 60%;
+      color: $primary;
       @media screen and (max-width: 768px) {
-        display: block;
-        .styled-title {
-          margin-bottom: 3rem;
+        width: 100%;
+        text-align: center;
+      }
+      h1 {
+        font-weight: bold;
+        span {
+          font-size: 2.8rem;
+        }
+      }
+      h4 {
+        font-size: 1.2rem;
+      }
+      .btn {
+        font-size: 1.2rem;
+        color: $light;
+        width: 70%;
+        border: 4px solid $secondary;
+
+        box-shadow: 0 0 2px $secondary, 0 0 10px $secondary, 0 0 50px $secondary,
+          0 0 200px $secondary;
+        -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+
+        &:hover {
+          color: $primary;
+        }
+      }
+      .arrow-down {
+        margin: 1.5rem;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        @media screen and (max-width: 768px) {
+          justify-content: center;
+        }
+        i {
+          font-size: 2.5em;
+          margin-right: 0.5rem;
         }
       }
 
-      // width: 50%;
-      .styled-title {
-        // left: 0;
-        // writing-mode: vertical-rl;
-        // text-orientation: upright;
-        font-family: "Bodoni", sans-serif;
-        // font-size: 1rem;
-        // border-right: 2px solid $secondary;
-        // border-left: 2px solid $secondary;
-        // margin-right: 3rem;
-
-        background: -webkit-linear-gradient(
-          $primary,
-          $secondary,
-          $primary,
-          $secondary,
-          $primary
-        );
-        background-clip: unset;
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-      .text {
+      @media screen and (min-width: 992px) {
         h1 {
-          font-weight: bold;
+          font-size: 3rem;
           span {
-            font-size: 3rem;
+            font-size: 4rem;
           }
+        }
+        h4 {
+          font-size: 1.5rem;
         }
         .btn {
-          font-size: 1.5rem;
-          color: $light;
+          font-size: 2rem;
         }
+      }
+    }
+    .picture {
+      display: grid;
+      place-items: center;
 
+      @media screen and (max-width: 768px) {
+        order: -1;
+        width: 100%;
+      }
+
+      img {
+        width: 100%;
+        max-width: 15rem;
+        // box-shadow: 0 0 2px $secondary, 0 0 10px $secondary, 0 0 50px $secondary,
+        //   0 0 200px $secondary;
+
+        @media screen and (min-width: 768px) {
+          max-width: 30rem;
+        }
         @media screen and (min-width: 992px) {
-          h1 {
-            font-size: 3rem;
-            span {
-              font-size: 4rem;
-            }
-          }
-          h4 {
-            font-size: 1.5rem;
-          }
-          .btn {
-            font-size: 2rem;
-          }
+          max-width: 35rem;
         }
       }
     }
   }
+}
+
+.about {
+  // height: 100vh;
 }
