--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -142,18 +142,30 @@ header {
       h4 {
         font-size: 1.2rem;
       }
-      .btn {
-        font-size: 1.2rem;
-        color: $light;
-        width: 70%;
-        border: 4px solid $secondary;
+      .btn-contact {
+        display: flex;
+        @media screen and (max-width: 768px) {
+          justify-content: center;
+        }
+        .btn {
+          font-size: 1.2rem;
+          color: $light;
+          width: 70%;
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          p {
+            margin: 0;
+          }
+          // border: 4px solid $secondary;
 
-        box-shadow: 0 0 2px $secondary, 0 0 10px $secondary, 0 0 50px $secondary,
-          0 0 200px $secondary;
-        -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+          box-shadow: 0 0 2px $secondary, 0 0 10px $secondary,
+            0 0 30px $secondary, 0 0 500px $secondary;
+          -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 
-        &:hover {
-          color: $primary;
+          &:hover {
+            color: $primary;
+          }
         }
       }
       .arrow-down {
@@ -181,8 +193,10 @@ header {
         h4 {
           font-size: 1.5rem;
         }
-        .btn {
-          font-size: 2rem;
+        .btn-contact {
+          .btn {
+            font-size: 2rem;
+          }
         }
       }
     }
