--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -23,27 +23,26 @@ p {
 }
 
 .portfolio {
-  position: relative;
-}
-
-header {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
   .top-info {
     display: flex;
     justify-content: center;
     padding: 0.5rem;
 
+    @media screen and (max-width: 768px) {
+      display: block;
+      text-align: center;
+    }
+
     .contact-info {
+      justify-content: center;
       display: flex;
-      align-items: center;
-      margin-right: 3rem;
-      margin-bottom: 0.3rem;
+      margin-bottom: 0.1rem;
       color: $dark;
+      @media screen and (min-width: 768px) {
+        margin-right: 3rem;
+
+        align-items: center;
+      }
 
       i {
         margin-right: 0.5rem;
@@ -58,7 +57,7 @@ header {
         color: $light;
         margin-right: 0.5rem;
         background: $primary;
-        padding: 0.2rem;
+        padding: 0.3rem;
         border-radius: 50%;
         cursor: pointer;
       }
@@ -67,7 +66,8 @@ header {
   nav {
     background: rgba(217, 92, 50);
     color: $primary;
-    position: fixed;
+    position: sticky;
+    top: 0;
     width: 100%;
     box-shadow: 0 0 0.5rem $secondary;
     z-index: 10;
@@ -97,6 +97,14 @@ header {
       }
     }
   }
+}
+
+header {
+  // height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
   .content {
     height: 100%;
@@ -124,19 +132,6 @@ header {
     .text {
       width: 60%;
       color: $primary;
-      @media screen and (max-width: 768px) {
-        width: 100%;
-        text-align: center;
-      }
-      h1 {
-        font-weight: bold;
-        span {
-          font-size: 2.8rem;
-        }
-      }
-      h4 {
-        font-size: 1.2rem;
-      }
       .btn-contact {
         display: flex;
         @media screen and (max-width: 768px) {
@@ -171,11 +166,42 @@ header {
 
         @media screen and (max-width: 768px) {
           justify-content: center;
+          margin-top: 0.5rem;
         }
         i {
           font-size: 2.5em;
           margin-right: 0.5rem;
         }
+      }
+      // @media screen and (max-width: 568px) {
+      //   h1 {
+      //     font-size: 1.2rem;
+      //     span {
+      //       font-size: 1.5rem;
+      //     }
+      //   }
+      //   h4 {
+      //     font-size: 1.2rem;
+      //   }
+      //   .btn-contact {
+      //     .btn {
+      //       font-size: 1.2rem;
+      //     }
+      //   }
+      // }
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        text-align: center;
+      }
+      h1 {
+        font-weight: bold;
+        font-size: 1.2rem;
+        span {
+          font-size: 2rem;
+        }
+      }
+      h4 {
+        font-size: 1rem;
       }
 
       @media screen and (min-width: 992px) {
@@ -206,9 +232,11 @@ header {
 
       img {
         width: 100%;
-        max-width: 15rem;
-        // box-shadow: 0 0 2px $secondary, 0 0 10px $secondary, 0 0 50px $secondary,
-        //   0 0 200px $secondary;
+        max-width: 12rem;
+
+        // @media screen and (min-width: 568px) {
+        //   max-width: 25rem;
+        // }
 
         @media screen and (min-width: 768px) {
           max-width: 30rem;
