--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,12 +64,12 @@ p {
     }
   }
   nav {
-    background: rgba(217, 92, 50);
-    color: $primary;
+    background: $primary;
+    color: $secondary;
     position: sticky;
     top: 0;
     width: 100%;
-    box-shadow: 0 0 0.5rem $secondary;
+    box-shadow: 0 0 0.5rem $primary;
     z-index: 10;
     .inner {
       display: flex;
@@ -77,8 +77,8 @@ p {
       justify-content: space-between;
 
       i {
-        background: $dark;
-        color: $light;
+        background: $secondary;
+        color: $primary;
         cursor: pointer;
         padding: 0.2rem;
         border-radius: 35%;
@@ -87,10 +87,10 @@ p {
       ul {
         li {
           a {
-            color: $primary;
+            color: $secondary;
             cursor: pointer;
             &:hover {
-              color: $dark;
+              color: $light;
             }
           }
         }
@@ -100,7 +100,8 @@ p {
 }
 
 header {
-  // height: 100vh;
+  height: 80vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), transparent);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,7 +132,8 @@ header {
     }
     .text {
       width: 60%;
-      color: $primary;
+      color: $secondary;
+      overflow: visible;
       .btn-contact {
         display: flex;
         @media screen and (max-width: 768px) {
@@ -139,7 +141,8 @@ header {
         }
         .btn {
           font-size: 1.2rem;
-          color: $light;
+          background: $primary;
+          color: $secondary;
           width: 70%;
           display: flex;
           align-items: center;
@@ -149,12 +152,12 @@ header {
           }
           // border: 4px solid $secondary;
 
-          box-shadow: 0 0 2px $secondary, 0 0 10px $secondary,
-            0 0 30px $secondary, 0 0 500px $secondary;
+          box-shadow: 0 0 2px $primary, 0 0 10px $primary, 0 0 30px $primary,
+            0 0 500px $primary;
           -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
 
           &:hover {
-            color: $primary;
+            color: $secondary;
           }
         }
       }
@@ -224,6 +227,7 @@ header {
     .picture {
       display: grid;
       place-items: center;
+      overflow: visible;
 
       @media screen and (max-width: 768px) {
         order: -1;
@@ -250,5 +254,11 @@ header {
 }
 
 .about {
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.1));
+  height: 100vh;
+}
+
+.services {
+  background: linear-gradient(rgba(0, 0, 0, 0.1), transparent);
   height: 100vh;
 }
