--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -266,8 +266,9 @@ header {
         flex-direction: column;
         height: 100%;
         h1 {
-          border-left: 2px solid $primary;
+          border-left: 2px solid $dark;
           padding-left: 1rem;
+          color: $dark;
         }
         @media screen and (max-width: 768px) {
           h1 {
@@ -304,7 +305,7 @@ header {
               transition: all 0.5s ease-in-out;
 
               &:hover {
-                background: $primary;
+                background: $primary-light;
                 color: $light;
 
                 .btn {
@@ -337,7 +338,7 @@ header {
               }
 
               &:hover {
-                background: $primary;
+                background: $primary-light;
                 color: $light;
               }
 
@@ -370,7 +371,7 @@ header {
               transition: all 0.5s ease-in-out;
 
               &:hover {
-                background: $primary;
+                background: $primary-light;
                 color: $light;
               }
               i {
@@ -398,7 +399,7 @@ header {
             transition: all 0.5s ease-in-out;
 
             &:hover {
-              background: $primary;
+              background: $primary-light;
               color: $light;
 
               i {
@@ -423,7 +424,60 @@ header {
   }
 }
 
-// .services {
-//   background: linear-gradient(transparent, rgba(0, 0, 0, 0.3));
-//   height: 100vh;
-// }
+.works {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
+  height: 100%;
+
+  .inner {
+    h1 {
+      border-left: 2px solid $dark;
+      padding-left: 1rem;
+      color: $dark;
+    }
+    .works-section {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 2rem;
+      place-items: center;
+
+      @media screen and (max-width: 992px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+      .work {
+        position: relative;
+        overflow: hidden;
+        border-radius: 1rem;
+
+        &:hover {
+          .caption {
+            left: 0;
+          }
+        }
+        img {
+          max-width: 20rem;
+          // max-height: 9rem;
+        }
+        .caption {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          transition: all 0.5s ease-in-out;
+          top: 0;
+          left: -100%;
+          background: $primary-light;
+          color: $light;
+          a {
+            color: inherit;
+          }
+        }
+      }
+    }
+  }
+}
