--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -302,11 +302,25 @@ header {
               background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
               box-shadow: 0 0 0.8rem $primary;
               padding: 2rem;
-              transition: all 0.5s ease-in-out;
+              position: relative;
+              overflow: hidden;
+
+              .desc-slide {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                left: -100%;
+                transition: all 0.5s ease-in-out;
+                top: 0;
+                background: $primary-light;
+                z-index: -1;
+              }
 
               &:hover {
-                background: $primary-light;
                 color: $light;
+                .desc-slide {
+                  left: 0;
+                }
 
                 .btn {
                   border-color: $light;
@@ -332,14 +346,29 @@ header {
               background: linear-gradient(transparent, rgba(0, 0, 0, 0.2));
               box-shadow: 0 0 0.8rem $primary;
               padding: 1rem;
-              transition: all 0.5s ease-in-out;
+              position: relative;
+              overflow: hidden;
+
+              .contact-slide {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                right: -100%;
+                transition: all 0.5s ease-in-out;
+                top: 0;
+                background: $primary-light;
+                z-index: -1;
+              }
               h4 {
                 text-align: right;
               }
 
               &:hover {
-                background: $primary-light;
                 color: $light;
+
+                .contact-slide {
+                  right: 0;
+                }
               }
 
               .about-contact {
@@ -453,6 +482,7 @@ header {
         box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
           0 0 0 $primary;
         -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
+        padding: 0.5rem;
 
         &:hover {
           .caption {
@@ -460,7 +490,8 @@ header {
           }
         }
         img {
-          max-width: 20rem;
+          max-width: 18rem;
+          border-radius: 1rem;
 
           // max-height: 9rem;
         }
