--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -82,15 +82,15 @@ p {
       justify-content: space-between;
 
       i {
-        background: $primary;
-        color: $light;
+        background: $light;
+        color: $primary;
         cursor: pointer;
         padding: 0.2rem;
         border-radius: 20%;
 
         &:hover {
-          background: none;
-          color: $primary;
+          background: $primary;
+          color: $light;
           box-shadow: 0 10px 10px $primary;
         }
       }
@@ -481,6 +481,7 @@ header {
         border-radius: 1rem;
         box-shadow: 0 0 1px $primary, 0 0 5px $primary, 0 0 10px $primary,
           0 0 0 $primary;
+        background: linear-gradient(transparent, #0005);
         -webkit-box-reflect: below 1px linear-gradient(transparent, #0005);
         padding: 0.5rem;
 
@@ -513,6 +514,120 @@ header {
           }
         }
       }
+    }
+  }
+}
+
+.contact {
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.3));
+  height: 100%;
+  padding: 1rem 0;
+
+  .inner {
+    h1 {
+      text-align: right;
+      border-right: 2px solid $primary;
+      padding-right: 1rem;
+    }
+    .contact-section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .question {
+        text-align: center;
+        width: 30%;
+        i {
+          font-size: 10rem;
+        }
+      }
+      form {
+        width: 60%;
+
+        .form-control {
+          background: linear-gradient(transparent, rgba(0, 0, 0, 0.3));
+          border: none;
+          border-bottom: 2px solid $primary;
+          box-shadow: none;
+        }
+        .send-btn {
+          display: flex;
+          justify-content: flex-end;
+          .btn {
+            width: 50%;
+          }
+        }
+      }
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        justify-content: center;
+
+        .question {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          margin-bottom: 2rem;
+          i {
+            font-size: 5rem;
+          }
+        }
+        form {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  background: rgba(0, 0, 0, 0.5);
+  padding: 0.5rem 0 0.01rem 0;
+  height: 100%;
+
+  .inner {
+    height: 100%;
+    .footer-info {
+      display: flex;
+      justify-content: center;
+      padding-top: 1rem;
+
+      img {
+        max-width: 10rem;
+        @media screen and (max-width: 768px) {
+          max-width: 5rem;
+        }
+      }
+      .footer-contact {
+        .contact-info {
+          margin-bottom: 0.2rem;
+          display: flex;
+          align-items: center;
+          i {
+            margin-right: 0.5rem;
+            color: $primary;
+          }
+
+          p {
+            margin: 0;
+            font-size: 0.8rem;
+          }
+        }
+        .social {
+          display: flex;
+          justify-content: center;
+          i {
+            margin-right: 1rem;
+            padding: 0.2rem;
+            background: $primary;
+            color: $light;
+          }
+        }
+      }
+    }
+    .copyright {
+      margin-top: 1rem;
+      font-size: 0.7rem;
+      text-align: center;
     }
   }
 }
