--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,8 +9,8 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
 
 * {
@@ -135,7 +135,7 @@ p {
   }
   .contact {
     h1 {
-      border-right: 2px solid $primary;
+      border-right: 2px solid $primary2 !important;
       color: $primary2 !important;
     }
     .question {
@@ -252,7 +252,7 @@ p {
                 }
               }
               a {
-                color: $light;
+                color: $light !important;
                 cursor: pointer;
                 &:hover {
                   color: $dark;
@@ -269,7 +269,7 @@ p {
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transition: all 1s ease-in-out;
             background: linear-gradient(
               rgba(0, 0, 0, 0.9),
               rgba(0, 0, 0, 0.9),
