added links to the social icons

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -829,6 +829,10 @@ header {
           border: none;
           border-bottom: 2px solid $primary;
           box-shadow: none;
+
+          &::placeholder {
+            color: $light;
+          }
         }
         .send-btn {
           display: flex;
